[gd_scene load_steps=9 format=2]

[ext_resource path="res://ui/scripts/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://assets/background.jpg" type="Texture" id=2]

[sub_resource type="Gradient" id=6]
offsets = PoolRealArray( 0, 9.27549e-39, 1 )
colors = PoolColorArray( 0, 0, 0, 0.4, 0, 0, 0, 0.6, 0, 0, 0, 0 )

[sub_resource type="GradientTexture" id=7]
gradient = SubResource( 6 )

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.0745098, 0.92549, 0.0745098, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0.0392157, 0.419608, 0.0392157, 1 )
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12
shadow_color = Color( 0.0745098, 0.92549, 0.0745098, 0.3 )
shadow_size = 10

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.0392157, 0.588235, 0.0392157, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0.0313726, 0.313726, 0.0313726, 1 )
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.364706, 0.25098, 0.215686, 0.9 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0.243137, 0.152941, 0.137255, 1 )
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12
shadow_size = 6

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.243137, 0.152941, 0.137255, 0.95 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0.156863, 0.0823529, 0.0705882, 1 )
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
expand = true
stretch_mode = 7
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Overlay" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = SubResource( 7 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TitleCont" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -200.0
margin_top = 80.0
margin_right = 200.0
margin_bottom = 250.0
custom_constants/separation = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="TitleCont"]
margin_right = 400.0
margin_bottom = 100.0
rect_min_size = Vector2( 0, 100 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
text = "LIVESTOCK
TYCOON"
align = 1
valign = 1
uppercase = true

[node name="StarsCont" type="HBoxContainer" parent="TitleCont"]
margin_top = 110.0
margin_right = 400.0
margin_bottom = 124.0
alignment = 1

[node name="S1" type="Label" parent="TitleCont/StarsCont"]
margin_left = 192.0
margin_right = 192.0
margin_bottom = 14.0
custom_colors/font_color = Color( 1, 0.843137, 0, 1 )
text = "‚òÖ"

[node name="S2" type="Label" parent="TitleCont/StarsCont"]
margin_left = 196.0
margin_right = 196.0
margin_bottom = 14.0
custom_colors/font_color = Color( 1, 0.843137, 0, 1 )
text = "‚òÖ"

[node name="S3" type="Label" parent="TitleCont/StarsCont"]
margin_left = 200.0
margin_right = 200.0
margin_bottom = 14.0
custom_colors/font_color = Color( 1, 0.843137, 0, 1 )
text = "‚òÖ"

[node name="S4" type="Label" parent="TitleCont/StarsCont"]
margin_left = 204.0
margin_right = 204.0
margin_bottom = 14.0
custom_colors/font_color = Color( 1, 0.843137, 0, 1 )
text = "‚òÖ"

[node name="S5" type="Label" parent="TitleCont/StarsCont"]
margin_left = 208.0
margin_right = 208.0
margin_bottom = 14.0
custom_colors/font_color = Color( 1, 0.843137, 0, 1 )
text = "‚òÖ"

[node name="ButtonsCont" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -160.0
margin_top = -50.0
margin_right = 160.0
margin_bottom = 250.0
custom_constants/separation = 16
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NewGame" type="Button" parent="ButtonsCont"]
margin_right = 320.0
margin_bottom = 64.0
rect_min_size = Vector2( 0, 64 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/normal = SubResource( 1 )
text = "NEW GAME"

[node name="LoadGame" type="Button" parent="ButtonsCont"]
margin_top = 80.0
margin_right = 320.0
margin_bottom = 136.0
rect_min_size = Vector2( 0, 56 )
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 5 )
custom_styles/normal = SubResource( 3 )
text = "LOAD GAME"

[node name="Options" type="Button" parent="ButtonsCont"]
margin_top = 152.0
margin_right = 320.0
margin_bottom = 208.0
rect_min_size = Vector2( 0, 56 )
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 5 )
custom_styles/normal = SubResource( 3 )
text = "OPTIONS"

[node name="Credits" type="Button" parent="ButtonsCont"]
margin_top = 224.0
margin_right = 320.0
margin_bottom = 272.0
rect_min_size = Vector2( 0, 48 )
text = "CREDITS"
flat = true

[node name="Cloud1" type="Label" parent="."]
modulate = Color( 1, 1, 1, 0.2 )
margin_left = 40.0
margin_top = 100.0
margin_right = 104.0
margin_bottom = 164.0
rect_scale = Vector2( 4, 4 )
text = "‚òÅ"

[node name="Cloud2" type="Label" parent="."]
modulate = Color( 1, 1, 1, 0.15 )
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -150.0
margin_top = -200.0
margin_right = -100.0
margin_bottom = -136.0
rect_scale = Vector2( 3, 3 )
text = "‚òÅ"

[node name="Footer" type="Control" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 24.0
margin_top = -80.0
margin_right = 300.0
margin_bottom = -24.0

[node name="Version" type="Label" parent="Footer"]
margin_right = 276.0
margin_bottom = 14.0
custom_colors/font_color = Color( 1, 1, 1, 0.6 )
text = "V1.0.4 PRODUCTION"

[node name="Copyright" type="Label" parent="Footer"]
margin_top = 24.0
margin_right = 276.0
margin_bottom = 38.0
custom_colors/font_color = Color( 1, 1, 1, 0.4 )
text = "¬© 2024 FARMSIM STUDIOS"
uppercase = true

[node name="SheepMascot" type="Label" parent="Footer"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 400.0
margin_top = -60.0
margin_right = 464.0
margin_bottom = 4.0
rect_scale = Vector2( 2, 2 )
text = "üêë"
